@@ -229,7 +229,6 @@ hardware/TE923Tool.cpp
 hardware/Teleinfo.cpp
 hardware/ToonThermostat.cpp
 hardware/VolcraftCO20.cpp
-hardware/VolcraftCO20Tool.cpp
 hardware/WOL.cpp
 hardware/Wunderground.cpp
 hardware/YouLess.cpp
